@@ -4,4 +4,4 @@ This is a snapshot of the Qt port of WebKit from
 
 and has the sha1 checksum
 
-        c1252be57a3f673277c732c0902568111b2f4964
+        c0107296d95cf4f2e988513db42572976ff7d55e
